--- a/stylesheet.css
+++ b/stylesheet.css
@@ -140,3 +140,23 @@ span.highlight {
     display: inline-block;
     border-radius: 10px;
 }
+
+.email-icon {
+  color: #000000; /* Black for email icon */
+  margin-right: .25rem;
+}
+
+.cv-icon {
+  color: #4a4a4a; /* Dark grey for CV icon */
+  margin-right: .25rem;
+}
+
+.github-icon {
+  color: #181717; /* GitHub's brand color */
+  margin-right: .25rem;
+}
+
+.linkedin-icon {
+  color: #0072b1; /* Linkedin's brand color */
+  margin-right: .25rem;
+}
