--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,6 +124,7 @@ span.highlight {
 
 /* Photo (same look as before) */
 .profile-img{
+  /* margin-top: 10px; */
   width: 100%;
   height: auto;
   object-fit: cover;
